--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,9 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile files('libs/volley.jar')
-    compile 'com.google.android.gms:play-services:7.3.0'
+    compile 'com.google.android.gms:play-services:7.8.0'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
 }
 dependencies {
     compile('com.lsjwzh:materialloadingprogressbar:0.5.4-RELEASE')}
+
