--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "dapp.com.awok.awokdriversapp"
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -25,7 +25,22 @@ dependencies {
     compile files('libs/volley.jar')
     compile 'com.google.android.gms:play-services:7.8.0'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    compile 'com.github.clans:fab:1.6.2'
+    compile 'com.github.dworks:asignature:bc4749f070@aar'
+    compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.github.bumptech.glide:glide:3.6.0'
+    compile 'com.nineoldandroids:library:2.4.0'
 }
 dependencies {
-    compile('com.lsjwzh:materialloadingprogressbar:0.5.4-RELEASE')}
+    compile('com.lsjwzh:materialloadingprogressbar:0.5.4-RELEASE')
+}
+dependencies {
+    compile 'com.android.support:support-v4:22.+'
+    compile 'com.android.support:design:22.+'
+}
+dependencies {
+    compile 'com.android.support:support-v4:22.+'
+    compile 'com.android.support:design:22.+'
+    compile 'me.iwf.photopicker:PhotoPicker:0.2.7@aar'
+}
 
